# fastapi-boilerplate

./: 404.html  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: jekyll-gh-pages.yml  mkdocs.yaml  run-tests.yml
docs/: SETUP.mdx  gcloud.md  index.md  setup.md
gcloud/: index.html
search/: search_index.json
setup/: index.html
src/: run.py
src/app/: app.py  main.py
src/app/core/: __init__.py  app.py  cors.py  error_handlers.py  logging.py  logs.py  request_context.py
src/app/utils/: getenv.py
src/tests/: conftest.py
src/tests/app/: test_main.py
src/tests/app/core/: test_cors.py  test_error_handlers.py  test_request_context.py
src/tests/testutils/: mock_environ.py  mock_server.py
